Fix book list spacing

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -431,8 +431,8 @@ header {
 
 .book-list-item {
   display: table;
-  padding-bottom: 20px;
-  margin-bottom: 20px;
+  padding-bottom: 30px;
+  margin-bottom: 30px;
   border-bottom: 1px solid #e3e3e5;
   .item-cover {
     display: table-cell;
